--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,25 @@
   <meta charset="utf-8">
   <title>CURD</title>
   <base href="/">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  
+  <nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Angualr 2 CURD</a>
+    </div>
+  </nav>
+  
+  <div class="container">
+    <app-root>Loading...</app-root>  
+  </div>
+  
+  
 </body>
 </html>
